Update server to use StableValues.